--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "swiper": "^11.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
